<resources>
    <string name="app_name">Task</string>

    <!--  Global section  -->
    <string name="global_save_user">Save user</string>
    <string name="global_user_saved">User saved</string>
    <string name="global_remove_user">Remove user</string>
    <string name="global_user_avatar">User avatar</string>
    <string name="global_users">Users</string>
    <string name="global_saved_users">Saved users</string>

    <string name="global_paramString_comma_2">%1$s, %2$s</string>
    <string name="global_paramString_space_3">%1$s %2$s %3$s</string>
    <!--  end Global section  -->

    <!--  UserDetail page  -->
    <string name="text_UserDetail_btn_save_activated">@string/global_save_user</string>
    <string name="text_UserDetail_btn_save_deactivated">@string/global_user_saved</string>
    <string name="text_UserDetail_btn_remove_user">@string/global_remove_user</string>
    <string name="description_UserDetail_avatar">@string/global_user_avatar</string>
    <!--  end UserDetail page  -->

    <!--  UserList page  -->
    <string name="description_UserList_avatar">@string/global_user_avatar</string>
    <!--  end UserList page  -->


    <string name="label_or">or</string>
    <string name="label_language_en">English</string>
    <string name="label_language_ru">Russian</string>
    <string name="label_language_hy">Armenian</string>
    <string name="label_welcome_to_globbing">Welcome to Globbing</string>
    <string name="label_enter_your_account">Enter your account</string>

    <string name="btn_continue_with_google">Continue with Google</string>
    <string name="btn_continue_with_facebook">Continue with Facebook</string>
    <string name="btn_signIn_sign_up">Sign In / Sign Up</string>
    <string name="btn_later">Later</string>
    <string name="btn_forgot_password">Forgot password</string>
    <string name="btn_do_not_have_an_account_sign_up">Don\'t have an account, Sign up</string>

    <string name="hint_phone_number">Phone number</string>
    <string name="hint_password">Password</string>

</resources>